--- a/style.css
+++ b/style.css
@@ -1,34 +1,18 @@
-.my-container {
-  width: 82%;
-  margin: 0 auto;
-  max-width: 1170px;
-
-  /* max-w-[1170px] mx-auto lg:w-[82%] w-[93%] */
-}
-
 .font-manrope {
   font-family: "Manrope", sans-serif;
 }
 
-.common-p {
-  color: #13131899;
-  font-weight: 500;
-  line-height: 28px; /* 175% */
-
-  /* text-[#13131899] font-medium */
-}
-
-.section-title {
-  color: #131318;
-  font-size: 36px;
-  font-weight: 800;
-
-  /* text-our-black text-2xl lg:text-4xl font-extrabold mb-6*/
-}
-
-.inner-section-heading {
-  color: #131318;
-  font-size: 20px;
-  font-weight: 800;
-  /* text-our-black text-xl font-extrabold */
+.i-1::before {
+  content: "";
+  position: absolute;
+  border-radius: 0.75rem;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.403);
+  -webkit-border-radius: 0.75rem;
+  -moz-border-radius: 0.75rem;
+  -ms-border-radius: 0.75rem;
+  -o-border-radius: 0.75rem;
 }
